[tool.poetry]
name = "travel-map"
version = "0.1.0"
description = ""
authors = ["matsurih <pipikapu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
googlemaps = "^4.6.0"
pydantic = "^1.10.2"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
